Fixed Portfolio Grid Break on Mobile S Responsive

--- a/src/styles/portfolioCard.css
+++ b/src/styles/portfolioCard.css
@@ -200,7 +200,7 @@
     grid-template-columns: 1fr;
     gap: 0.5rem;
     margin-bottom: 1rem;
-    max-width: 85%;
+    /* max-width: 80%; */
   }
   .portfolio-case-section {
     max-width: 20.5rem;
@@ -209,6 +209,8 @@
 
   .portfolio-card {
     min-width: 17rem;
+
+    margin: 1rem 0rem;
   }
 }
 
